--- a/fe-configs/tsconfig/next/tsconfig.json
+++ b/fe-configs/tsconfig/next/tsconfig.json
@@ -7,17 +7,7 @@
     /**********/
     "baseUrl": ".", // 모듈 해석의 기준이 되는 디렉토리
     "paths": {
-      // Next.js 일반적인 path alias 설정
-      "@/*": ["./src/*"],
-      "@/components/*": ["./src/components/*"],
-      "@/app/*": ["./src/app/*"], // App Router
-      "@/pages/*": ["./src/pages/*"], // Pages Router
-      "@/utils/*": ["./src/utils/*"],
-      "@/types/*": ["./src/types/*"],
-      "@/hooks/*": ["./src/hooks/*"],
-      "@/lib/*": ["./src/lib/*"],
-      "@/styles/*": ["./src/styles/*"],
-      "@/public/*": ["./public/*"]
+      "@/*": ["./src/*"]
     },
     "module": "ESNext", // 사용할 모듈 시스템 지정 (최신 ESM 사용)
     "moduleDetection": "force", // 모듈 탐지 방식 강제 설정
@@ -44,30 +34,18 @@
     /*****************************/
     "strict": true, // 모든 엄격한 타입 체크 옵션 활성화
     "exactOptionalPropertyTypes": true, // 선택적 속성의 정확한 타입 검사
-    "noFallthroughCasesInSwitch": true, // switch 문 break 누락 에러
-    "noImplicitAny": true, // any 타입 암시적 사용 금지
     "noImplicitOverride": true, // 오버라이드 명시적 표시 요구
     "noImplicitReturns": true, // 모든 경로 return 요구
-    "noImplicitThis": true, // this 타입 명시 요구
-    "noUnusedLocals": true, // 사용되지 않는 지역 변수 에러
-    "noUnusedParameters": true, // 사용되지 않는 매개변수 에러
-    "strictBindCallApply": true, // bind/call/apply 엄격한 타입 검사
-    "strictFunctionTypes": true, // 함수 파라미터 엄격한 타입 체크
-    "strictNullChecks": true, // null/undefined 엄격한 체크
-    "strictPropertyInitialization": true, // 클래스 속성 초기화 체크
     "noPropertyAccessFromIndexSignature": true, // 인덱스 서명 점 표기법 금지
     "noUncheckedIndexedAccess": true, // 배열 인덱스 접근 시 undefined 고려
-    "allowUnreachableCode": false, // 도달 불가능한 코드 금지
-    "allowUnusedLabels": false, // 사용되지 않는 레이블 금지
     
     /***********************/
     /* Interop Constraints */
     /***********************/
-    "allowSyntheticDefaultImports": true, // default import 문법 허용
     "esModuleInterop": true, // CommonJS 모듈 ES6 import 허용
     "forceConsistentCasingInFileNames": true, // 파일명 대소문자 일관성
     "isolatedModules": true, // 독립적 모듈 처리 (SWC 호환성)
-    "verbatimModuleSyntax": false, // import/export 문법 보존 (Next.js와 호환성을 위해 false)
+    "verbatimModuleSyntax": true, // import/export 문법 보존
     
     /********/
     /* Emit */
@@ -81,7 +59,6 @@
     /*****************************/
     "allowJs": true, // JavaScript 파일 import 허용
     "skipLibCheck": true, // 라이브러리 타입 체크 건너뛰기 (성능 향상)
-    "assumeChangesOnlyAffectDirectDependencies": true, // 성능 최적화
     
     /************************/
     /* Additional Strictness */
